# ToastLang

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  test.ll
exampleCode/: add-numbers.toast  array-test.toast  array.toast  binaryFunc.toast  forLoop.toast  mandelBrot.toast  string-test.toast  test1.toast  test2.toast  toastlang strcutrure.txt
src/: astNode.c  astNode.h  codeGen.c  codeGen.cpp  codeGen.h  codegen.h  codegen.rs  lexer.cpp  lexer.h  lexer.rs  main.c  main.cpp  main.rs  parser old.rs.bak  parser.cpp  parser.h  parser.rs  tokens.c  tokens.cpp  tokens.h
