[package]
name = "ToastLang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
uuid = { version = "0.8.1", features = ["v4"] }
rustyline = "10.0.0"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
multimap = "0.10.0"